Opened 18 years ago

Closed 18 years ago

Last modified 18 years ago

#434 closed bug (fixed)

Team resources might not be freed on exit (when it was killed?)

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: System/Kernel Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

app_server doesn't close app windows if app was killed. Steps to reproduce: Start DiskProbe and close it. Start FileTypes and set Generic file to open with DiskProbe. No go to /boot/beos/etc/Keymap, select all and press enter. You will see that diskprobe will open every Keymap (sometimes with messages " could not resolve link" or smth like that. Now try to kill DiskProbe with Vulcan death grip from Deskbar. DiskProbe will be killed, but all opened windows will be still there. Tested with rev17033 under vmware.

Attachments (2)

tracker_crash_2.PNG (40.7 KB ) - added by diver 18 years ago.
back trace
app_server_crash_4.PNG (25.1 KB ) - added by diver 18 years ago.
back trace

Download all attachments as: .zip

Change History (22)

comment:1 by axeld, 18 years ago

1) I don't get any error messages from DiskProbe 2) I can't reproduce the bug - all windows are closed just fine over here. (tested on real hardware)

comment:2 by diver, 18 years ago

I will retest it right now on real hardware with latest revision. Stay tuned :)

comment:3 by diver, 18 years ago

(In reply to comment #1)

1) I don't get any error messages from DiskProbe

I still can reproduce this one. Error message is coming from Tracker, not DiskProbe

2) I can't reproduce the bug - all windows are closed just fine over here. (tested on real hardware)

I can't either, maybe already fixed?

Should we close this bug or left for until #1 will be resolved?

comment:4 by axeld, 18 years ago

I actually don't remember having fixed this, but I know for sure that I saw it some time ago. So even if this is not reproducible anymore the way you found, I think we should keep this one open for now.

comment:5 by darkwyrm, 18 years ago

I've got a reproducible way for you: kill any app via the Deskbar (Ctrl+Alt+Win+Shift and click on a team). The app window goes nowhere - all that can be done is to move the zombie off to the side of the window.

comment:6 by diver, 18 years ago

Now when i try to go to /boot/beos/etc/Keymap, select all and press enter Tracker crashes, back trace will follow, tested under vmware with hrev17519.

comment:7 by diver, 18 years ago

Also while this debug window is opened a can't launch any app from Deskbar...

by diver, 18 years ago

Attachment: tracker_crash_2.PNG added

back trace

comment:8 by axeld, 18 years ago

This seems to be a kernel bug: for some reason, the team's resources aren't deleted on exit.

comment:9 by axeld, 18 years ago

Component: ServersKernel

comment:10 by axeld, 18 years ago

Summary: [app_server] doesn't close app windows if app was killedTeam resources might not be freed on exit (when it was killed?)

comment:11 by axeld, 18 years ago

Fixed in hrev17652. Threads could get rescheduled too early on exit, and thus couldn't return their death stacks anymore (so their team resources never got freed, too).

comment:12 by axeld, 18 years ago

Status: newclosed

comment:13 by axeld, 18 years ago

Resolution: fixed

comment:14 by diver, 18 years ago

Status: closedreopened

comment:15 by diver, 18 years ago

I'm sorry, but i have to reopen this bug. I just tried to do what i described in my first message and app_server crashed. Tested with hrev17671 under vmware. back trace will follow.

comment:16 by diver, 18 years ago

Resolution: fixed

by diver, 18 years ago

Attachment: app_server_crash_4.PNG added

back trace

comment:17 by axeld, 18 years ago

Whatever this bug is, it has nothing to do with the one before. Please open a new bug for this.

comment:18 by axeld, 18 years ago

Resolution: fixed

comment:19 by axeld, 18 years ago

Status: reopenedclosed

comment:20 by diver, 18 years ago

Crash mentioned in comment #12, explained in #653 should be fixed with bug 686. Tracker crash from comment #7 is now sepatated to #653.

Note: See TracTickets for help on using tickets.