* Fixed a big race condition that could leave threads waiting infinitely and   let them eat death stack entries: after setting the next thread state to   THREAD_STATE_FREE_ON_RESCHED, interrupts were enabled again, which could   cause the thread to be rescheduled before having called put_death_stack().   This fixes bug #434. * Note that the above change pretty much reverts revision 7865 that was supposed   to fix interrupt problem on thread exit (patch by Jack Burton almost 2 years   ago, that's how long this problem existed!). * Made get_death_stack() and put_death_stack() symmetrical in that they don't   change interrupts. Also pulled out rescheduling from put_death_stack[_and_reschedule]()   and put it back into thread_exit2().

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17652 a95241bf-73f2-0310-859d-f6bbb57e9c96